# rlbox_segmentsfizerocost_sandbox

./: CMakeLists.txt  README.md
c_src/: dlmalloc.c  ldt_manipulate_inc.cpp  malloc_wrap.c  mmap_aligned_inc.cpp  proc_mapping_inc.cpp  segmentsfi_sandbox_runtime.cpp  trampoline.S
include/: rlbox_segmentsfi_sandbox.hpp  segmentsfi_sandbox_runtime.h
test/: test_segmentsfi_sandbox_glue.cpp
